added single listing api
- New api to get single listing data based on table_relation
