# routes/api.php
@@ -14,17 +14,17 @@ Route::get('/user', function (Request $request) {
 //HOW TO MAKE NEWLY CREATED API AVAILABLE IN SWAGGER:-
 //CLI Command: php artisan l5-swagger:generate
 
+//login
+Route::post('/login', [UserController::class, 'login']);
+
+//logout
+Route::middleware('auth:sanctum')->post('/logout', [UserController::class, 'logout']);
+
 //for testing purpose
 Route::middleware('auth:sanctum')->get('/weather/{city}', [WeatherController::class, 'getWeatherByCity']);
 
 //get user role
 Route::middleware('auth:sanctum')->get('/me', [UserController::class, 'me']);
-
-//logout
-Route::middleware('auth:sanctum')->post('/logout', [UserController::class, 'logout']);
-
-//login
-Route::post('/login', [UserController::class, 'login']);
 
 //get listing table
 Route::middleware('auth:sanctum')->get('/listing/{table}', [ListingController::class, 'getListing']);
@@ -34,3 +34,8 @@ Route::middleware('auth:sanctum')->post('/form-submit/{formName}', [FormControll
 
 //update records
 Route::middleware('auth:sanctum')->put('/form-submit/{formName}/{id}', [FormController::class, 'updateForm']);
+
+//get single listing data
+Route::middleware('auth:sanctum')->get('/form-show/{formName}/{id}', [ListingController::class, 'getSingleRecord']);
+
+
